--- a/index.html
+++ b/index.html
@@ -119,11 +119,6 @@
             class="w-full h-full object-cover"
           >
         </div>
-  
-        <div class="absolute -bottom-4 left-1/2 transform -translate-x-1/2 bg-white/90 backdrop-blur-sm px-4 py-2 rounded-full shadow-lg border border-primary/30 flex items-center gap-2">
-          <span class="w-2 h-2 bg-green-500 rounded-full"></span>
-          <span class="font-bold text-primary text-sm">Disponible</span>
-        </div>
      
         <div class="absolute -top-4 -right-4 bg-gradient-to-r from-primary to-accent p-3 rounded-xl shadow-lg hidden md:block">
           <div class="text-white text-center">
@@ -159,7 +154,7 @@
       <div class="grid grid-cols-2 gap-6">
         <div class="flex items-center">
           <div class="bg-primary/10 p-3 rounded-full mr-4"><i class="fas fa-graduation-cap text-primary"></i></div>
-          <div><div class="font-bold text-white">BACALAURÉAT</div><div class="text-gray-400 text-sm">LE CAPITOLE</div></div>
+          <div><div class="font-bold text-white">BACCALAURÉAT</div><div class="text-gray-400 text-sm">LE CAPITOLE</div></div>
         </div>
         <div class="flex items-center">
           <div class="bg-secondary/10 p-3 rounded-full mr-4"><i class="fas fa-map-marker-alt text-secondary"></i></div>
